@@ -1,4 +1,7 @@
-Mon May 28 21:21:39 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+Mon May 28 23:21:39 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed nickname formatting crash when updating existing
+	  client entry.  Affected file is lib/silcclient/client_entry.c.
 
 	* Fixed MIME object encoding in attribute payload encoding.
 	  Affected file is lib/silccore/silcattrs.c.
